force-app/main/default/objects/PagoDeAportaciones__c/fields/CuentaPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CuentaPrincipal__c</fullName>
    <formula>HYPERLINK ( &quot;/&quot; &amp; Cliente__r.Parent.Id , Cliente__r.Parent.Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta principal</label>
    <type>Text</type>
</CustomField>