force-app/main/default/objects/PagoDeAportaciones__c/fields/CuentaPrincipalId__c.field-meta.xml
<CustomField>
    <fullName>CuentaPrincipalId__c</fullName>
    <formula>Cliente__r.Parent.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta principal Id</label>
    <type>Text</type>
</CustomField>