force-app/main/default/objects/PagoDeAportaciones__c/fields/FechaCancelado__c.field-meta.xml
<CustomField>
    <fullName>FechaCancelado__c</fullName>
    <label>Fecha cancelado</label>
    <type>Date</type>
</CustomField>