force-app/main/default/objects/PagoDeAportaciones__c/fields/FechaContabilizado__c.field-meta.xml
<CustomField>
    <fullName>FechaContabilizado__c</fullName>
    <label>Fecha contabilizado</label>
    <type>Date</type>
</CustomField>