force-app/main/default/objects/PagoDeAportaciones__c/fields/FechaProgramada__c.field-meta.xml
<CustomField>
    <fullName>FechaProgramada__c</fullName>
    <label>Fecha programada</label>
    <type>Date</type>
</CustomField>