force-app/main/default/objects/PagoDeAportaciones__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <formula>CASESAFEID ( Id )</formula>
    <label>Id</label>
    <type>Text</type>
</CustomField>