force-app/main/default/objects/PagoDeAportaciones__c/fields/IdQbo__c.field-meta.xml
<CustomField>
    <fullName>IdQbo__c</fullName>
    <externalId>true</externalId>
    <label>Id QBO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>