force-app/main/default/objects/PagoDeAportaciones__c/fields/IdQboCliente__c.field-meta.xml
<CustomField>
    <fullName>IdQboCliente__c</fullName>
    <formula>Cliente__r.Parent.IdQbo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id QBO Cliente</label>
    <type>Text</type>
</CustomField>