force-app/main/default/objects/PagoDeAportaciones__c/fields/MetodoDePago__c.field-meta.xml
<CustomField>
    <fullName>MetodoDePago__c</fullName>
    <label>Método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MetodoPagoAportaciones</valueSetName>
    </valueSet>
</CustomField>