force-app/main/default/objects/PagoDeAportaciones__c/fields/PagoDeAportacionCreadoEnQbo__c.field-meta.xml
<CustomField>
    <fullName>PagoDeAportacionCreadoEnQbo__c</fullName>
    <formula>NOT ( ISBLANK ( IdQbo__c ) )</formula>
    <label>Pago de aportación creado en QBO</label>
    <type>Checkbox</type>
</CustomField>