force-app/main/default/objects/PagoDeAportaciones__c/fields/TipoDeAportacion__c.field-meta.xml
<CustomField>
    <fullName>TipoDeAportacion__c</fullName>
    <label>Tipo de aportación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoDeAportacion</valueSetName>
    </valueSet>
</CustomField>